# COC_Buddy

./: .gitignore  pyproject.toml
coc_discord_bot/: main.py
